# vdg

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-publish.yml
src/vdg/: autopub.py  draftgen.py  main.py
src/vdg/templates/: bangumi.html.jinja  bangumi.title.txt.jinja  form.yml  vcb-s.html.jinja
test/: config.yaml  黑暗集会.html  黑暗集会.md  黑暗集会_main.html  黑暗集会_titles.txt
vdg/: autopub.py  core.py  draftgen.py  filters.py  main.py  publish.py  utils.py  yaml_preprocess.py
vdg/templates/: bangumi.html.jinja  form.yml  html.jinja  html.template  html.tmpl  html_v2.template  main.jinja  main.template  main.tmpl  old_page_upd.template  titles.jinja  titles.template  txt.jinja  vcb-s.com.title.txt.jinja  yaml.template
